Fixed the banner arrow squished on mobile

--- a/themes/inbeat/assets/scss/partials/_banner.scss
+++ b/themes/inbeat/assets/scss/partials/_banner.scss
@@ -22,6 +22,7 @@
         }
         span{
             margin-left: 10px;
+            font-size: 12px;
         }
         text-align: center;
     }
